gateway/simple-gateway-deployment.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: httpbin-gw
spec:
  gatewayClassName: httpbin-gw
  listeners:
  - protocol: HTTP
    port: 9580
    name: httpbin-gw-ln
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
spec:
  parentRefs:
  - name: httpbin-gw
  rules:
  - backendRefs:
    - name: httpbin-app
      port: 80
